--- a/index.html
+++ b/index.html
@@ -6,7 +6,56 @@
     <title>blog</title>
   </head>
   <body>
-    <div class="container"></div>
+
+    <div class="container">
+      <div class="header-1"></div>
+      <div class="header-2">
+        <div class="header-2 header-2-1">Blog</div>
+        <div class="header-2 header-2-2">Resume</div>
+        <div class="header-2 header-2-3">Contact</div>
+      </div>
+
+      <div class="main1">
+        <h1>A world that works for you</h1>
+        <p>IFTTT is the free way to get all your apps and devices talking to each other. Not everything on the internet plays nice, so we're on a mission to build a more connected world.</p>
+      </div>
+
+      <div class="main2">
+        <img src="https://web-assets.ifttt.com/assets/home/new_home/above_ill_d-dd0b01e170eaa7d275357320c7c3b10000a00f34764b1ddc2d22842cb3cf383e.png" alt="main image">
+      </div>
+
+      <div class="middle1">
+        <img src="https://web-assets.ifttt.com/assets/home/new_home/above_ill_d-dd0b01e170eaa7d275357320c7c3b10000a00f34764b1ddc2d22842cb3cf383e.png" alt="middle image">
+        <h2>helps your apps and devices work together in new ways</h2>
+        <p>We’ll show you some of our favorite pairings.<br>Just turn on what you like and we’ll make it happen for you.</p>
+        <button class="buttons">Contact</button>
+      </div>
+
+      <div class="sidebar1">
+        <div class="articles">
+          <p class="titles">article title</p>
+          <p class="contents">paragraph</p>
+          <p class="dates">date</p>
+        </div>
+        <div class="articles">
+          <p class="titles">article title</p>
+          <p class="contents">paragraph</p>
+          <p class="dates">date</p>
+        </div>
+      </div>
+
+      <div class="sidebar2">
+        <img src="https://web-assets.ifttt.com/assets/home/new_home/above_ill_d-dd0b01e170eaa7d275357320c7c3b10000a00f34764b1ddc2d22842cb3cf383e.png" alt="article image">
+      </div>
+
+      <div class="ending">
+        <p class="titles">Hi there!</p>
+        <p class="contents">Want to tell me something interesting? I'd love to hear from you!</p>
+        <input type="email" value="" name="" placeholder="Your email address" aria-label="Email Address"><br>
+        <textarea name="name" rows="8" cols="0"></textarea><br>
+        <button class="buttons">Send</button>
+      </div>
+    </div>
 
   <script src="build/bundle.js"></script>
   </body>
