Swiching it to react components

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
   </head>
   <body>
 
-    <div class="container">
-      <div class="header-1"></div>
-      <div class="header-2">
-        <div class="header-2 header-2-1">Blog</div>
-        <div class="header-2 header-2-2">Resume</div>
-        <div class="header-2 header-2-3">Contact</div>
-      </div>
+    <div class="body">
+
+      <!-- <div class="about-me"></div>
+      <div class="navbar">
+        <div class="navbar-1">Blog</div>
+        <div class="navbar-2">Resume</div>
+        <div class="navbar-3">Contact</div>
+      </div> -->
 
       <div class="main1">
         <h1>A world that works for you</h1>
