--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-    <div class="body">
+    <div class="root">
 
       <!-- <div class="about-me"></div>
       <div class="navbar">
@@ -16,14 +16,14 @@
         <div class="navbar-3">Contact</div>
       </div> -->
 
-      <div class="main1">
+      <!-- <div class="main1">
         <h1>A world that works for you</h1>
         <p>IFTTT is the free way to get all your apps and devices talking to each other. Not everything on the internet plays nice, so we're on a mission to build a more connected world.</p>
-      </div>
+      </div> -->
 
-      <div class="main2">
+      <!-- <div class="main2">
         <img src="https://web-assets.ifttt.com/assets/home/new_home/above_ill_d-dd0b01e170eaa7d275357320c7c3b10000a00f34764b1ddc2d22842cb3cf383e.png" alt="main image">
-      </div>
+      </div> -->
 
       <div class="middle1">
         <img src="https://web-assets.ifttt.com/assets/home/new_home/above_ill_d-dd0b01e170eaa7d275357320c7c3b10000a00f34764b1ddc2d22842cb3cf383e.png" alt="middle image">
